--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,28 @@
 .read-the-docs {
   color: #888;
 }
+/* Section.css */
+.nav-container {
+  display: flex;
+  background: #0f1a2c;
+  padding: 12px;
+}
+
+.nav-btn {
+  background: none;
+  border: none;
+  padding: 10px 20px;
+  margin-right: 10px;
+  color: #ccc;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 14px;
+  transition: all 0.3s ease;
+}
+
+.nav-btn.active {
+  background-color: #2b78f0;
+  color: white;
+  box-shadow: 0 0 12px rgba(43, 120, 240, 0.6);
+}
+
